instructions.Instructions.scala.error
Compilation error:
Instructions:11: error: ';' expected but ')' found.
brushUp)() 
       ^