instructions.Instructions.scala.code
brushDown()
left()
forward()
forward()
left()
forward()
forward()
left()
forward()
forward()
brushUp)()